# Autonomous-Navigation-Control-for-KasyTwin-Robot

./: CMakeLists.txt  README.md  launch_program.sh  launch_program_gazebo.sh  package.xml
bringup/config/: config.yaml
description/: holes_pipe.stl  kasytwin.urdf.xacro  kasytwin_core.xacro  real_life.stl  sensors.xacro  test_setup3.dae  tube_model.sdf
include/control_1/: motor_command_node.hpp  pca_node.hpp  pid_control_node.hpp  reference_manager_node.hpp  topic_health_monitor.hpp
launch/: rsp.launch.gazebo.py  rsp.launch.py
scripts/: odom_to_tf.py
src/: imu_quat_to_euler_node.cpp  laser_to_pointcloud.cpp  motor_command_node.cpp  pca_node.cpp  pid_control_node.cpp  reference_manager_node.cpp  topic_health_monitor.cpp
